src/main/metadata/objects/CDM_Integration_URLs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>It contains URLs from Informatica</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informatica_URL__c</fullName>
        <label>Informatica URL</label>
        <type>Url</type>
    </fields>
	<fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CDM Integration URLs</label>
</CustomObject>